# yolo_two_kanban

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend.dev  README.md  docker-compose.yml  docker-entrypoint.sh
.claude/: settings.local.json
backend/: AGENTS.md  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 4bac092bc80b_add_kanban_tables.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py
backend/src/api/routers/: __init__.py  ai.py  auth.py  boards.py  cards.py  columns.py  health.py  hello.py  websockets.py
backend/src/config/: __init__.py  database.py  settings.py
backend/src/database/: connection.py  models.py  schemas.py
backend/src/models/: __init__.py
backend/src/schemas/: __init__.py  ai.py  auth.py  board.py  card.py  column.py
backend/src/services/: ai_service.py  board_service.py  card_service.py  column_service.py  user_service.py  utils.py
backend/src/utils/: logging.py
backend/tests/: test_auth.py  test_database.py  test_hello.py
docs/: PLAN.md  Plan5:DatabaseModellingPLAN.md  database_schema.md
frontend/: AGENTS.md  jest.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/auth/: AuthGuard.tsx
frontend/components/chat/: ChatSidebar.tsx
frontend/components/kanban/: CardEditor.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
frontend/components/layout/: Header.tsx
frontend/components/ui/: Button.tsx  Card.tsx  DropdownMenu.tsx  Input.tsx  Modal.tsx  Textarea.tsx
scripts/: AGENTS.md  start-dev.ps1  start-dev.sh  start-docker.sh  stop-dev.ps1  stop-dev.sh  stop-docker.sh
